[package]
name = "rho-lang"
version = "0.1.0"
edition = "2021"
description = "Compiler for ρ (RHO) Language: Time-eliminated topological dataflow language"

[dependencies]
nom = "7.1"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.6"
z3 = { version = "0.12", optional = true }

[features]
default = []
z3-solver = ["dep:z3"]
